--- a/examples/combobox/aria1.1pattern/listbox-combo.html
+++ b/examples/combobox/aria1.1pattern/listbox-combo.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
 <meta charset="utf-8" />
-<title>Example of ARIA 1.1 Combobox with Listbox Popup | WAI-ARIA Authoring Practices 1.1</title>
+<title>Examples of ARIA 1.1 Combobox with Listbox Popup | WAI-ARIA Authoring Practices 1.1</title>
 
 <!--  Core js and css shared by all examples; do not modify when using this template. -->
 <link rel="stylesheet" href="https://www.w3.org/StyleSheets/TR/2016/base.css">
@@ -19,17 +19,15 @@
 </head>
 <body>
   <main>
-  <h1>Example of Combobox with Listbox Popup</h1>
+  <h1>Examples of ARIA 1.1 Combobox with Listbox Popup</h1>
   <p>
     <strong>NOTE:</strong> This page is work in progress; it is not ready for review.
     This work is tracked by <a href="https://github.com/w3c/aria-practices/issues/100">issue 100</a>.
   </p>
   <p>
-    <!-- Provide an overview of the example where the first sentence provides a link to the section of aria-practices.html that describes the pattern this example implements. -->
-    Replace this paragraph with an overview of the example that is something like the following. The
-    below example section demonstrates a simple checkbox that implements the
-    <a href="../../#checkbox">design pattern for checkbox.</a>
-    This example uses ... summarize salient techniques )
+    The following examples demonstrate  different types of autocomplete behavior 
+    using the ARIA 1.1 form of the 
+    <a href="../../../#combobox">combobox design pattern.</a>
   </p>
   <p>Similar examples include: </p>
   <ul>
@@ -38,17 +36,10 @@
   </ul>
 
   <section>
-    <h2 id="ex_label">Example</h2>
-    <div role="separator" id="ex_start_sep" aria-labelledby="ex_start_sep ex_label" aria-label="Start of"></div>
-    <!--
-      Note the ID of the following div that contains the example HTML is used as a parameter for the sourceCode.add() function.
-      The sourceCode functions in the examples/js/examples.js render the HTML source to show it to the reader of the example page.
-      If you change the ID of this div, be sure to update the parameters of the sourceCode.add() function call, which is made following the div with id="sc1" where the HTML is render.
-      The div for the rendered HTML source is in the last section of the page.
-    -->
+    <h2 id="ex_label">Examples</h2>
+    <h3 id="ex1_label">Example of list autocomplete with manual selection</h3>
+    <div role="separator" id="ex1_start_sep" aria-labelledby="ex1_start_sep ex1_label" aria-label="Start of"></div>
     <div id="ex1">
-
-      <p>Example using listbox</p>
       <label id="ex1-label" class="combobox-label">
         Fruits and vegetables
       </label>
@@ -73,8 +64,9 @@
         </ul>
       </div>
     </div>
-
-    <p>Another listbox example where first item is preselected</p>
+    <div role="separator" id="ex1_end_sep" aria-labelledby="ex1_end_sep ex1_label" aria-label="End of"></div>
+    <h3 id="ex2_label">Example of list autocomplete with automatic selection</h3>
+    <div role="separator" id="ex2_start_sep" aria-labelledby="ex2_start_sep ex2_label" aria-label="Start of"></div>
     <div id="ex2">
       <label id="ex2-label" class="combobox-label">
         Fruits and vegetables
@@ -100,8 +92,10 @@
         </ul>
       </div>
     </div>
+    <div role="separator" id="ex2_end_sep" aria-labelledby="ex2_end_sep ex2_label" aria-label="End of"></div>
 
-    <p>A listbox example with inline autocomplete behavior</p>
+    <h3 id="ex3_label">Example of list with inline autocomplete</h3>
+    <div role="separator" id="ex3_start_sep" aria-labelledby="ex3_start_sep ex3_label" aria-label="Start of"></div>
     <div id="ex3">
       <label id="ex3-label" class="combobox-label">
         Fruits and vegetables
@@ -135,7 +129,7 @@
         </ul>
       </div>
     </div>
-    <div role="separator" id="ex_end_sep" aria-labelledby="ex_end_sep ex_label" aria-label="End of"></div>
+    <div role="separator" id="ex3_end_sep" aria-labelledby="ex3_end_sep ex3_label" aria-label="End of"></div>
   </section>
 
   <section>
@@ -266,8 +260,7 @@
   </section>
   </main>
   <nav>
-    <!--  Update the pattern_ID parameter of this link to refer to the APG design pattern section related to this example.  -->
-    <a href="../../#pattern_ID">EXAMPLE_NAME Design Pattern in WAI-ARIA Authoring Practices 1.1</a>
+    <a href="../../../#combobox">combobox design pattern in WAI-ARIA Authoring Practices 1.1</a>
   </nav>
 </body>
 </html>
