--- a/aria-practices.html
+++ b/aria-practices.html
@@ -930,7 +930,7 @@
         and in some implementations, attempts to interact with the inert content cause the dialog to close.
       </p>
       <p>
-        Like <a href="#dialog_nonmodal">non-modal dialogs</a>, modal dialogs contain their tab sequence.
+        Like non-modal dialogs, modal dialogs contain their tab sequence.
         That is, <kbd>Tab</kbd> and <kbd>Shift + Tab</kbd> do not move focus outside the dialog.
         However, unlike most non-modal dialogs, modal dialogs do not provide means for moving keyboard focus outside the dialog window without closing the dialog.
       </p>
@@ -1047,11 +1047,6 @@
           </li>
         </ul>
       </section>
-    </section>
-
-    <section class="widget" id="dialog_nonmodal">
-      <h3>Dialog (Non-Modal)</h3>
-      <p>Drafting content for this section is tracked by <a href="https://github.com/w3c/aria-practices/issues/59">issue 59</a>. </p>
     </section>
 
     <section class="widget" id="disclosure">
@@ -2515,8 +2510,7 @@
       </p>
       <p>
         Tooltip widgets do not receive focus.
-        A hover that contains focusable elements can be made using the
-        a <a href="#dialog_nonmodal">non-modal dialog pattern</a>.
+        A hover that contains focusable elements can be made using a non-modal dialog.
       </p>
       <section class="notoc">
         <h4>Example</h4>
