--- a/aria-practices.html
+++ b/aria-practices.html
@@ -2326,10 +2326,61 @@
         <a href="https://github.com/w3c/aria-practices/issues/90">issue 90</a>.
       </p>
       <p>
-        This is a place holder for a to-be-written section about data tables.
-        The grid pattern includes text describing how to choose between using grid and table, and it links to this section.
-        This section does not necessarily have to be part of the design pattern section.
+        Like an HTML <code>table</code> element, a WAI-ARIA table is a static tabular structure containing one or more rows that each contain one or more cells; it is not an interactive widget.
+        Thus, its cells are not focusable or selectable.
+        The <a href="#grid">grid pattern</a> is used to make an interactive widget that has a tabular structure.
       </p>
+      <p>
+        However, just like with HTML <code>table</code> elements, WAI-ARIA tables are often used to present information that contains interactive widgets.
+        Each widget contained in a table is a separate stop in the page tab sequence.
+        If a table includes a significant number of widgets, the length of the page tab sequence can be dramatically reduced by replacing the table with a grid.
+      </p>
+      <p class="note">
+        As with other WAI-ARIA roles that have a native host language equivalent, 
+        authors are strongly encouraged to use a native HTML <code>table</code> element whenever possible.
+        This is especially important with role <code>table</code> since it is a new feature of WAI-ARIA 1.1.
+        It is thus advisable to test implementations thoroughly with each browser and assistive technology combination that could be used by the target audience.
+      </p>
+      <section class="notoc">
+        <h4>Examples</h4>
+        <p><a href="examples/table/table.html">Table Example</a>: ARIA table made using HTML <code>div</code> and <code>span</code> elements.</p>
+      </section>
+      <section class="notoc">
+        <h4>Keyboard Interaction</h4>
+        <p>Not applicable.</p>
+      </section>
+      <section id="table_roles_states_props" class="notoc">
+        <h4>WAI-ARIA Roles, States, and Properties</h4>
+        <ul>
+          <li>The table container has role <a href="#table" class="role-reference">table</a>. </li>
+          <li>Each row container has role <a href="#row" class="role-reference">row</a> and is either a DOM descendant of or owned by the <code>table</code> element or an element with role <a href="#rowgroup" class="role-reference">rowgroup</a>. </li>
+          <li>Each cell is either a DOM descendant of or owned by a <code>row</code> element and has one of the following roles:
+            <ul>
+              <li><a href="#columnheader"  class="role-reference">columnheader</a> if the cell contains a title or header information for the column.</li>
+              <li><a href="#rowheader"  class="role-reference">rowheader</a> if the cell contains title or header information for the row.</li>
+              <li><a href="#cell" class="role-reference">cell</a> if the cell does not contain column or row header information.</li>
+            </ul>
+          </li>
+          <li>
+            If there is an element in the user interface that serves as a label for the table, <a href="#aria-labelledby" class="property-reference">aria-labelledby</a> is set on the table element with a value that refers to the labeling element.
+            Otherwise, a label is specified for the table element using <a href="#aria-label" class="property-reference">aria-label</a>.
+          </li>
+          <li>If the table has a caption or description, <a href="#aria-describedby" class="property-reference">aria-describedby</a> is set on the table element with a value referring to the element containing the description.</li>
+          <li>If the table contains sortable columns or rows, <a href="#aria-sort" class="property-reference">aria-sort</a> is set to an appropriate value on the header cell element for the sorted column or row as described in the section on <a href="#gridAndTableProperties">grid and table properties</a>. </li>
+          <li>
+            If there are conditions where some rows or columns are hidden or not present in the DOM, e.g., there are widgets on the page for hiding rows or columns, the following properties are applied as described in the section on <a href="#gridAndTableProperties">grid and table properties</a>.
+            <ul>
+              <li><a href="#aria-colcount" class="property-reference">aria-colcount</a> or <a href="#aria-rowcount" class="property-reference">aria-rowcount</a> is set to the total number of columns or rows, respectively. </li>
+              <li><a href="#aria-colindex" class="property-reference">aria-colindex</a> or <a href="#aria-rowindex" class="property-reference">aria-rowindex</a> is set to the position of a cell within a row or column, respectively. </li>
+            </ul>
+          </li>
+          <li>If the table includes cells that span multiple rows or multiple columns, then <a href="#aria-rowspan" class="property-reference">aria-rowspan</a> or <a href="#aria-colspan" class="property-reference">aria-colspan</a> is applied as described in <a href="#gridAndTableProperties">grid and table properties</a>.</li>
+        </ul>
+        <p class="note">
+          If rows or cells are included in a table via <a href="#aria-owns" class="property-reference">aria-owns</a>,
+          they will be presented to assistive technologies after the DOM descendants of the <code>table</code> element unless the DOM descendants are also included in the <code>aria-owns</code> attribute.
+        </p>
+      </section>
     </section>
 
     <section class="widget" id="tabpanel">
